# NoteFastAPI

./: .gitignore  alembic.ini  config.py  main.py  pyproject.toml
auth/: auth.py  database.py  manager.py  schemas.py
data/: __init__.py  note.py  user.py
migrations/: env.py
migrations/versions/: 615fe0531011_.py
model/: note.py  user.py
service/: user.py
src/: error.py  main.py
src/auth/: auth.py  database.py  schemas.py
src/data/: note.py  user.py
src/migrations/: env.py
src/migrations/versions/: 615fe0531011_.py
src/model/: model.py
src/schema/: note.py
src/service/: note.py  user.py
src/templates/: database.py
src/web/: note.py  user.py
templates/: database.py
test/unit/data/: test_user.py
web/: user.py
